--- a/css/style.css
+++ b/css/style.css
@@ -4,40 +4,87 @@
 }
 
 /* STYLE */
+
+/* FONTS */
+.perm-font{
+  font-family: 'Permanent Marker', cursive;
+}
+.sans-font{
+  font-family: 'Open Sans', sans-serif;
+}
 /* NAV */
 nav{
-  background: linear-gradient(to bottom, rgb(108, 131, 80), rgba(108, 131, 80, .01));
+  background: linear-gradient(to bottom, rgb(201,224,206), rgba(201,224,206,.01));
 }
 .navbar{
   text-align: center;
-  margin: 20px auto;
+  padding-bottom: 50px;
+  margin: 50px auto;
 }
 #logo{
   width: 300px;
   margin: 0 100px;
 }
 .link{
-  font-size: 24px;
+  font-size:32px;
   color: black;
 }
 
 /* MAIN */
 .main{
-  margin-top: 50px;
 }
 .portrait{
-  width: 400px;
+  width: 500px;
   float: right;
 }
-.about-me-info h4{
-  hyphens: auto;
+.about-me{
+  margin-top: 150px;
+  border: 1px solid grey;
+  background-color: rgba(201,224,206, .4);
+  box-shadow: 4px 4px 4px 4px rgba(47,49,45,.2);
 }
-/* DOODLES */
-
-.art{
+#name{
+  padding: 20px 0;
+  font-size: 48px;
+}
+.icons{
+  margin: 30px auto;
   text-align: center;
+}
+.social{
+  display: inline-block;
+  padding-bottom: 50px;
+  margin: auto 20px;
+}
+
+/* DOODLES */
+#porfolio{
+  background: linear-gradient(rgba(201,224,206,.01), rgb(201,224,206),rgba(201,224,206,.01));
+}
+/* #doodles-section{
+  height: auto;
+  padding-top: 50px;
+  padding: 50px 0;
+  background: linear-gradient(rgba(201,224,206,.01), rgb(201,224,206),rgba(201,224,206,.01));
+} */
+.section{
+  text-align: center;
+}
+.section-title{
+  font-size: 48px;
+  text-decoration: underline;
+  margin: 50px 0;
+  padding-top: 50px;
 }
 .doodle{
   display: inline-block;
-  width: 200px;
+  width: 150px;
+  margin: 2px 2px;
+  border: 4px solid white;
 }
+.web-info{
+  margin: 0 40px;
+  text-align: center;
+  padding-bottom: 40px;
+}
+/* WEB */
